tests/type_errors/list_where_int_expected.nos
# expect_error: expected `Int`, found `List
# Test: passing List where Int is expected

double(x: Int) = x * 2

main() = {
    xs = [1, 2, 3]
    double(xs)
}
